# Joystick-controlled-tilt-pan-servo

./: .gitignore  CMakeLists.txt  README.md
CMake/: gcc-arm-none-eabi.cmake
python_app/: gui.py  uart_api.py
src/: main.c
src/application/lib/: circular_queue.c  circular_queue.h  pwm.c  pwm.h  servo.c  servo.h  uart.c  uart.h
src/application/tasks/: joystick_task.c  joystick_task.h  led_task.c  led_task.h  servo_task.c  servo_task.h  uart_task.c  uart_task.h
src/config/: FreeRTOSConfig.h  startup_stm32f446xx.s
src/mcu/: stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h
